New CMake project structure

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,16 +1,13 @@
-cmake_minimum_required(VERSION 3.0.0)
-project(hello_window VERSION 0.1.0)
+cmake_minimum_required(VERSION 3.14)
+project(hello_window VERSION 0.1.0 DESCRIPTION "Executable project to experiment with OpenGL")
 set(CMAKE_CXX_STANDARD 20)
 
-add_executable(hello_window src/main.cpp dependencies/glad/glad.c)
+# Library code
+include_directories(dependencies)
+add_subdirectory(dependencies)
 
-target_include_directories(hello_window PRIVATE dependencies)
+# Library code
+add_subdirectory(src)
 
-find_package(OpenGL REQUIRED)
-
-set(GLFW_BUILD_DOCS OFF CACHE BOOL "" FORCE)
-set(GLFW_BUILD_TESTS OFF CACHE BOOL "" FORCE)
-set(GLFW_BUILD_EXAMPLES OFF CACHE BOOL "" FORCE)
-add_subdirectory(dependencies/glfw)
-
-target_link_libraries(hello_window glfw OpenGL::GL)
+# Executable code
+add_subdirectory(apps)
