Added textures to the house

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,8 +4,11 @@
         "Dloadproc",
         "framebuffer",
         "glfw",
+        "Mipmap",
+        "Parameteri",
         "Programiv",
         "Shaderiv",
+        "stbi",
         "Wwindow"
     ]
 }
