Added rotation animation to the house

--- a/apps/CMakeLists.txt
+++ b/apps/CMakeLists.txt
@@ -1,7 +1,7 @@
 find_package(OpenGL REQUIRED)
 
 add_executable(house house.cpp)
-target_link_libraries(house glfw OpenGL::GL glad glutils)
+target_link_libraries(house glfw OpenGL::GL glad glm glutils)
 
 add_executable(glm_sandbox glm_sandbox.cpp)
 target_link_libraries(glm_sandbox glm)
